Api routing and add email feature

--- a/styles/general.scss
+++ b/styles/general.scss
@@ -105,6 +105,10 @@ main {
 }
 
 .cat_events {
+  h1 {
+    text-transform: capitalize;
+  }
+
   .content {
     display: flex;
     flex-direction: row;
@@ -112,12 +116,53 @@ main {
     gap: 30px;
     width: 100%;
     margin: auto;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   .card {
     display: flex;
     flex-direction: column;
     width: 30%;
+  }
+}
+
+.event_single_page {
+  .email_registration {
+    margin-top: 25px;
+
+    label {
+      display: flex;
+      margin-bottom: 15px;
+      font-size: 18px;
+      font-weight: 800;
+      text-transform: uppercase;
+      margin-top: 25px;
+    }
+
+    input {
+      height: 30px;
+      min-width: 200px;
+      box-shadow: none;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      border-radius: 5px;
+      height: 30px;
+      min-width: 150px;
+      border: 1px solid #5f5a5a;
+      font-size: 16px;
+      text-transform: uppercase;
+      margin-left: 10px;
+      font-weight: 600;
+      background: #dcfff3;
+      cursor: pointer;
+      &:hover {
+        color: #dcfff3;
+        background: #333;
+      }
+    }
   }
 }
